<resources>
    <string name="app_name">Электромонтажный калькулятор</string>
    <string name="button_text">Рассчитать</string>
    <string name="button_text_all">Рассчитать всё</string>
    <string name="placeholder_hint">Введите целое число</string>
    <string name="save_value">Сохранить</string>
    <string name="category_button">☰</string>
    <string name="empty_value">0</string>
    <string name="all_result">Общий расчет</string>
    <string name="rozetki_ustanovka_text">Установка розеток и выключателей</string>
    <string name="rozetki_ustanovka_text_1">Установка розетки/выключателя в готовое отверстие. \n350 руб./шт.</string>
    <string name="rozetki_ustanovka_text_2">Установка выключателя в готовое отверстие. \n250 руб./шт.</string>
    <string name="rozetki_ustanovka_text_3">Установка компьютерной, телефонной, антенной розетки в готовое отверстие. \n350 руб./шт.</string>
    <string name="rozetki_ustanovka_text_4">Установка накладной розетки, выключателя. \n350 руб./шт.</string>
    <string name="rozetki_ustanovka_text_5">Установка накладного двухклавишного, перекрестного переключателя. \n400 руб./шт.</string>
    <string name="rozetki_ustanovka_text_6">Установка накладной компьютерной, телефонной, антенной розетки. \n400 руб./шт.</string>
    <string name="rozetki_ustanovka_text_7">Установка розетки/вилки для электроллиты 220В. \n600 руб./шт.</string>
    <string name="rozetki_ustanovka_text_8">Установка розетки/вилки для электроллиты 380В. \n800 руб./шт.</string>
    <string name="rozetki_ustanovka_text_9">Установка диммера (регулятора). \n750 руб./шт.</string>
    <string name="rozetki_ustanovka_text_10">Замена розетки/выключателя в подрозетнике. \n350 руб./шт.</string>
    <string name="rozetki_ustanovka_text_11">Замена накладной розетки/выключателя. \n400 руб./шт.</string>
    <string name="rozetki_ustanovka_text_12">Замена блока выключателей туалет/ванна/кухня. \n1000 руб./шт.</string>
    <string name="rozetki_ustanovka_text_13">Установка одноклавишного перекресного переключателя в готовое отверстие. \n400 руб./шт.</string>
    <string name="rozetki_ustanovka_text_14">Установка двухклавишного перекрестного переключателя в готовое отверстие. \n550 руб./шт.</string>
    <string name="light_text">Освещение</string>
    <string name="light_text1">Установка и подключение люстры, потолочного светильника (без сборки). \n1000 руб./шт.</string>
    <string name="light_text2">Установка настенного светильника, бра (без сборки). \n550 руб./шт.</string>
    <string name="light_text3">Установка и подключение встроенного точечного светильника в готовое отверстие. \n200 руб./шт.</string>
    <string name="light_text4">Разметка и сверление отверстия под встраиваемый светильник диаметр до 100 мм в гипсокартоне. \n250 руб./шт.</string>
    <string name="light_text5">Разметка и сверление отверстия под встраиваемый светильник диаметром до 100 мм в реечном потолке. \n350 руб./шт.</string>
    <string name="light_text6">Монтаж и подключение светодиодной ленты. \n150 руб./м.п.</string>
    <string name="light_text7">Установка и подключение блока питания 12/24 Вольта. \n350 руб./шт.</string>
    <string name="light_text8">Монтаж металлического профиля под светодиодную ленту. \n200 руб./м.п.</string>
    <string name="light_text9">Установка и подключение уличного светильника до 1000 Вт. \n1000 руб./шт.</string>
    <string name="light_text10">Сборка люстры. \n1000 руб./шт.</string>
    <string name="light_text11">Сборка бра, настенного светильника, любой сложности. \n600 руб./шт.</string>
    <string name="light_text12">Монтаж крюка для подвеса люстры. \n300 руб./шт.</string>
    <string name="cable_text">Прокладка кабеля</string>
    <string name="cable_text1">Прокладка кабеля в готовой штробе сечением до 2,5 мм. \n80 руб./м.п.</string>
    <string name="cable_text2">Прокладка кабеля в кабель-канале сечением до 2,5 мм. \n80 руб./м.п.</string>
    <string name="cable_text3">Прокладка кабеля в гофре/трубе сечением до 2,5 мм. \n120 руб./м.п.</string>
    <string name="cable_text4">Прокладка кабеля открытым способом на скобах/хомутах сечением до 2,5 мм. \n80 руб./м.п.</string>
    <string name="cable_text5">Прокладка кабеля в готовой штробе сечением от 4 до 10 мм. \n130 руб./м.п.</string>
    <string name="cable_text6">Прокладка кабеля в кабель-канале сечением от 4 до 10 мм. \n130 руб./м.п.</string>
    <string name="cable_text7">Прокладка кабеля в гофре/трубе сечением от 4 до 10 мм. \n150 руб./м.п.</string>
    <string name="cable_text8">Прокладка кабеля открытым способом на скобах/хомутах сечением от 4 до 10 мм. \n120 руб./м.п.</string>
    <string name="cable_text9">Затяжка кабеля в гофру, трубу сечением до 2,5 мм. \n30 руб./м.п.</string>
    <string name="cable_text10">Затяжка кабеля в гофру, трубу сечением до 6 мм. \n35 руб./м.п.</string>
    <string name="cable_text11">Затяжка кабеля в гофру, трубу сечением до 10 мм. \n40 руб./м.п.</string>
    <string name="cable_text12">Прокладка слаботочного кабеля: аудио, видео, витой пары. \n90 руб./м.п.</string>
    <string name="cable_text13">Обжим (UTP) витой пары. \n100 руб./шт.</string>
    <string name="shtroblenie_text">Штробление</string>
    <string name="shtroblenie_text1">Штробление мягких материалов, штроба 25х20мм.\n200 руб./м.п.</string>
    <string name="shtroblenie_text2">Штробление кирпичных стен, штроба 25х20мм.\n300 руб./м.п.</string>
    <string name="shtroblenie_text3">Штробление бетонных стен, штроба 25х20мм.\n700 руб./м.п.</string>
    <string name="shtroblenie_text4">Штробление бетонных стен СССР, штроба 25х20мм.\n1000 руб./м.п.</string>
    <string name="shtroblenie_text5">Черновая замазка штробы.\n70 руб./м.п.</string>
    <string name="podrozetniki_text">Сверление отверстий под подрозетники</string>
    <string name="podrozetniki_text1">Сверление отверстия в гипсокартоне.\n120 руб./шт.</string>
    <string name="podrozetniki_text2">Сверление отверстий в кирпичных стенах.\n400 руб./шт.</string>
    <string name="podrozetniki_text3">Сверление отверстий в газобетоне.\n250 руб./шт.</string>
    <string name="podrozetniki_text4">Сверление отверстия в бетоне.\n700 руб./шт.</string>
    <string name="podrozetniki_text5">Сверление отверстия под соединительную коробку в кирпичных стенах.\n400 руб./шт.</string>
    <string name="podrozetniki_text6">Сверление отверстия под соединительную коробку в газобетоне.\n250 руб./шт.</string>
    <string name="podrozetniki_text7">Сверление отверстия под соединительную коробку в бетоне.\n700 руб./шт.</string>
    <string name="podrozetniki_text8">Сверление отверстия в бетоне СССР.\n1000 руб./шт.</string>
    <string name="sverlenie_sten_text">Сквозное сверление стен</string>
    <string name="sverlenie_sten_text1">Сквозное сверление стены из кирпича до 20 см.\n245 руб./шт.</string>
    <string name="sverlenie_sten_text2">Сквозное сверление стены из бетона до 20 см.\n345 руб./шт.</string>
    <string name="sverlenie_sten_text3">Сквозное сверление стены из газобетона до 20 см.\n200 руб./шт.</string>
    <string name="sverlenie_sten_text4">Сквозное сверление стены из кирпича до 35 см.\n350 руб./шт.</string>
    <string name="sverlenie_sten_text5">Сквозное сверление стены из бетона до 35 см.\n590 руб./шт.</string>
    <string name="sverlenie_sten_text6">Сквозное сверление стены из газобетона до 35 см.\n300 руб./шт.</string>
    <string name="sverlenie_sten_text7">Сквозное сверление стены из кирпича до 50 см.\n445 руб./шт.</string>
    <string name="sverlenie_sten_text8">Сквозное сверление стены из бетона до 50 см.\n745 руб./шт.</string>
    <string name="sverlenie_sten_text9">Сквозное сверление стены из газобетона до 50 см.\n400 руб./шт.</string>
    <string name="sverlenie_sten_text10">Сквозное сверление стены из кирпича до 100 см.\n745 руб./шт.</string>
    <string name="sverlenie_sten_text11">Сквозное сверление стены из бетона до 100 см.\n1100 руб./шт.</string>
    <string name="montazh_text">Монтаж коробок, подрозетников</string>
    <string name="montazh_text1">Установка накладной распределительной коробки на поверхность из мягкого материала.\n150 руб./шт.</string>
    <string name="montazh_text2">Установка накладной распределительной коробки на кирпич/бетон.\n250 руб./шт.</string>
    <string name="montazh_text3">Установка подрозетника в гипсокартон.\n100 руб./шт.</string>
    <string name="montazh_text4">Установка подрозетника (вмазка) в готовое отверстие.\n100 руб./шт.</string>
    <string name="montazh_text5">Расключение р\к до 3-х кабелей клеммниками.\n400 руб./шт.</string>
    <string name="montazh_text6">Расключение р\к до 3-х кабелей ГМЛ, сварка, пайка.\n500 руб./шт.</string>
    <string name="montazh_text7">Расключение р\к более 3-х кабелей клеммниками.\n600 руб./шт.</string>
    <string name="montazh_text8">Расключение р\к более 3-х кабелей ГМЛ, сварка, пайка.\n750 руб./шт.</string>
    <string name="montazh_text9">Очистка подрозетников, расп. коробки от штукатурки.\n50 руб./шт.</string>
    <string name="electro_text">Электрощит</string>
    <string name="electro_text1">Штробление ниши под щит до 12 модулей (кирпич/бетон).\n2400 руб./шт.</string>
    <string name="electro_text2">Штробление ниши под щит до 18 модулей (кирпич/бетон).\n3600 руб./шт.</string>
    <string name="electro_text3">Штробление ниши под щит до 24 модулей (кирпич/бетон).\n4900 руб./шт.</string>
    <string name="electro_text4">Штробление ниши под щит до 36 модулей (кирпич/бетон).\n5350 руб./шт.</string>
    <string name="electro_text5">Штробление ниши под щит до 48 модулей (кирпич/бетон).\n7150 руб./шт.</string>
    <string name="electro_text6">Штробление ниши под щит до 54 модулей (кирпич/бетон).\n8200 руб./шт.</string>
    <string name="electro_text7">Штробление ниши под щит до 72 модулей (кирпич/бетон).\n11000 руб./шт.</string>
    <string name="electro_text8">Штробление ниши под щит до 12 модулей (газобетон).\n1800 руб./шт.</string>
    <string name="electro_text9">Штробление ниши под щит до 18 модулей (газобетон).\n2350 руб./шт.</string>
    <string name="electro_text10">Штробление ниши под щит до 24 модулей (газобетон).\n2400 руб./шт.</string>
    <string name="electro_text11">Штробление ниши под щит до 36 модулей (газобетон).\n3600 руб./шт.</string>
    <string name="electro_text12">Штробление ниши под щит до 48 модулей (газобетон).\n4700 руб./шт.</string>
    <string name="electro_text13">Штробление ниши под щит до 54 модулей (газобетон).\n5350 руб./шт.</string>
    <string name="zazemlenie_text">Заземление</string>
    <string name="zazemlenie_text1">Монтаж контура защитного заземления до 6м в частном доме (+ замер сопротивления).\n10000 руб./услуга.</string>
    <string name="zazemlenie_text2">Монтаж контура защитного заземления от 9 до 15 метров.\n15000 руб./услуга.</string>
    <string name="zazemlenie_text3">Отдельный выезд на замер существующего заземления (без протокола испытаний).\n2000 руб./услуга.</string>
    <string name="menu_text">Главное меню</string>
    <string name="menu_rozetki">Розетки и выключатели</string>
    <string name="menu_light">Освещение</string>
    <string name="menu_cable">Прокладка кабеля</string>
    <string name="menu_shtroblenie">Штробление</string>
    <string name="menu_podrozetniki">Сверление отверстий под подрозетники</string>
    <string name="menu_sverlenie_sten">Сквозное сверление стен</string>
    <string name="menu_montazh">Монтаж коробок, подрозетников</string>
    <string name="menu_electrical">Электрощит</string>
    <string name="menu_automats">Автоматы, УЗО, реле</string>
    <string name="menu_bitovaya">Подключение бытовой техники</string>
    <string name="menu_derevo">Электрика в деревянном доме, бане</string>
    <string name="menu_retro">Ретро проводка</string>
    <string name="menu_montazh_cable">Монтаж кабель-канала, лотков, труб</string>
    <string name="menu_zazemlenie">Заземление</string>
    <string name="menu_dop">Доп. работы</string>
    <string name="result_page">Итог</string>
</resources>